--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,76 @@
-.main-logo {
-  width: 200px;
+header .header-container {
+  margin-top: 20px;
+  margin-left: 1rem;
+  display: flex;
+  align-items: center;
 }
-
-.minimize-info {
+header .header-container .allegiant-logo-wrapper {
+  margin-right: 15px;
+}
+header .header-container .allegiant-logo-wrapper .main-logo {
+  width: 200px;
+  margin-right: 10px;
+}
+header .header-container nav {
+  margin-right: 2rem;
+}
+header .header-container .minimize-info {
   background: #d1e9ff;
   padding: 9px;
   display: flex;
   border-radius: 6px;
-  color: #1570ef;
   font-weight: 500;
+  color: #1570ef;
+}
+header .header-container .good-to-know-txt {
+  font-size: 10px;
+  display: inline-table;
 }
 
-.gradient-side {
+main .form-wrapper {
+  margin-right: 3rem;
+}
+main .gradient-side {
   color: white;
   font-weight: 400;
-  background-color: rgb(20, 38, 69);
   padding: 60px;
   background: linear-gradient(25.53deg, #0ba5ec 24.12%, #2e3192 95.96%);
 }
-
-.gradient-headline {
+main .gradient-headline {
   font-family: "Inter";
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
   line-height: 32px;
 }
-
-.bullets .question {
+main .bullets .question {
   font-family: "Inter";
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
 }
+main .to-dashboard-btn {
+  width: 100%;
+  background: #2e90fa;
+}
+main .review-number-txt {
+  margin-right: 10px;
+}
 
 .footer-txt {
   color: #667085;
+  padding-right: 4rem;
+  padding-left: 4rem;
 }
 
 @media screen and (max-width: 770px) {
   .claim-info {
     display: none;
   }
+}
+.white-space-nowrap {
+  white-space: nowrap;
 }
 
 /*# sourceMappingURL=styles.css.map */
