--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,14 @@ header .header-container {
   display: flex;
   align-items: center;
 }
+header .header-container .claim-info {
+  color: #667085;
+}
 header .header-container .allegiant-logo-wrapper {
   margin-right: 15px;
 }
 header .header-container .allegiant-logo-wrapper .main-logo {
-  width: 200px;
+  width: 150px;
   margin-right: 10px;
 }
 header .header-container nav {
@@ -27,8 +30,12 @@ header .header-container .good-to-know-txt {
   display: inline-table;
 }
 
+main {
+  margin-top: 1rem;
+}
 main .form-wrapper {
   margin-right: 3rem;
+  margin-top: 1rem;
 }
 main .gradient-side {
   color: white;
@@ -37,14 +44,12 @@ main .gradient-side {
   background: linear-gradient(25.53deg, #0ba5ec 24.12%, #2e3192 95.96%);
 }
 main .gradient-headline {
-  font-family: "Inter";
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
   line-height: 32px;
 }
 main .bullets .question {
-  font-family: "Inter";
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
