--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
+body {
+  padding-top: 110px;
+}
+
 header .header-container {
-  margin-top: 20px;
   margin-left: 1rem;
   display: flex;
   align-items: center;
@@ -51,7 +54,7 @@ main .gradient-headline {
 }
 main .bullets .question {
   font-style: normal;
-  font-weight: 500;
+  font-weight: 200;
   font-size: 20px;
   line-height: 30px;
 }
@@ -70,6 +73,9 @@ main .review-number-txt {
 }
 
 @media screen and (max-width: 770px) {
+  body {
+    padding-top: 50px;
+  }
   .claim-info {
     display: none;
   }
