--- a/styles.scss
+++ b/styles.scss
@@ -3,6 +3,10 @@ $gradient: linear-gradient(25.53deg, #0ba5ec 24.12%, #2e3192 95.96%);
 $gray: #667085;
 $blue: #1570ef;
 
+* {
+  font-family: "Inter";
+}
+
 body {
   padding-top: 110px;
   max-width: 1440px;
