--- a/styles.scss
+++ b/styles.scss
@@ -9,8 +9,10 @@ $blue: #1570ef;
 
 body {
   padding-top: 110px;
-  max-width: 2000px;
-  margin: auto;
+}
+
+.flex-1 {
+  flex: 1;
 }
 
 header {
@@ -20,9 +22,10 @@ header {
   .header-container {
     display: flex;
     align-items: center;
-
-    .container-fluid {
-      max-width: 2000px;
+    margin: auto;
+    .container-fluid-1 {
+      display: flex;
+      flex: 1;
     }
 
     .claim-info {
@@ -59,6 +62,8 @@ header {
 
 main {
   margin-top: 29px;
+  max-width: 1440px;
+  margin: auto;
   .form-wrapper {
     margin-left: 10%;
     margin-right: 3rem;
