--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ header .header-container {
 header .header-container .container-fluid-1 {
   display: flex;
   flex: 1;
+  margin-right: 28px;
+  padding-left: 26px;
 }
 header .header-container .claim-info {
   color: #667085;
@@ -118,6 +120,9 @@ main .review-number-txt {
 @media screen and (max-width: 770px) {
   body {
     padding-top: 50px;
+  }
+  div.allegiant-logo-wrapper {
+    margin-top: 8px !important;
   }
   .claim-info {
     display: none;
