--- a/styles.scss
+++ b/styles.scss
@@ -81,6 +81,16 @@ main {
       span:first-child {
         font-size: 18px;
       }
+      #pass1 {
+        border-right: 0;
+      }
+      .input-group-addon {
+        align-items: center;
+        display: flex;
+        padding-right: 10px;
+        padding-left: 10px;
+        border: 1px solid #d0d5dd;
+      }
     }
 
     .form-control {
