--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,15 @@ header .header-container {
 }
 header .header-container .container-fluid-1 {
   display: flex;
-  flex: 1;
+  width: 100%;
   margin-right: 28px;
   padding-left: 26px;
 }
 header .header-container .claim-info {
   color: #667085;
+  flex: 10;
+  align-self: center;
+  margin-top: 9px;
 }
 header .header-container .claim-info .claim-title {
   font-weight: 600;
@@ -33,6 +36,8 @@ header .header-container .claim-info .claim-title {
 }
 header .header-container .allegiant-logo-wrapper {
   margin-right: 15px;
+  margin-top: 24px;
+  height: 67px;
 }
 header .header-container .allegiant-logo-wrapper .main-logo {
   width: 150px;
@@ -45,6 +50,7 @@ header .header-container .minimize-info {
   border-radius: 6px;
   font-weight: 500;
   color: #1570ef;
+  cursor: pointer;
 }
 header .header-container .good-to-know-txt {
   font-size: 12px;
