--- a/styles.scss
+++ b/styles.scss
@@ -150,6 +150,10 @@ main {
   padding-left: 4rem;
 }
 
+.navbar-toggler {
+  visibility: hidden !important;
+}
+
 @media screen and (max-width: 770px) {
   body {
     padding-top: 50px;
@@ -165,6 +169,10 @@ main {
 
   .gradient-side {
     margin: 6%;
+  }
+
+  .navbar-toggler {
+    visibility: hidden !important;
   }
 }
 
