--- a/styles.scss
+++ b/styles.scss
@@ -174,6 +174,11 @@ main {
   .navbar-toggler {
     visibility: hidden !important;
   }
+
+  .rating-wrapper {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
 
 // Util classes
