--- a/styles.scss
+++ b/styles.scss
@@ -12,7 +12,7 @@ body {
 }
 
 input {
-  color: #667085!important;
+  color: #667085 !important;
 }
 
 .flex-1 {
@@ -149,9 +149,12 @@ main {
 }
 
 .footer-txt {
-  color: $gray;
+  color: #667085;
   padding-right: 4rem;
   padding-left: 4rem;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
 }
 
 .navbar-toggler {
