--- a/styles.scss
+++ b/styles.scss
@@ -195,6 +195,11 @@ main {
   }
 
   main {
+    .gradient-headline {
+      font-size: 16px;
+      line-height: 24px;
+    }
+
     .gradient-side {
       margin: 6%;
       padding: 20px;
@@ -233,4 +238,35 @@ main {
 
 .white-space-nowrap {
   white-space: nowrap;
+}
+
+// Tablet View
+@media (min-width: 776px) and (max-width: 1065px) {
+  header .header-container .good-to-know-txt {
+    font-size: 10px;
+  }
+
+  body {
+    padding-top: 150px;
+  }
+
+  body.non-collapsed-claim {
+    padding-top: 110px;
+  }
+
+  main {
+    .gradient-headline {
+      font-size: 20px;
+      line-height: 24px;
+    }
+
+    .bullets .question {
+      font-size: 15px;
+    }
+  }
+
+  .rating-wrapper {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
