--- a/styles.css
+++ b/styles.css
@@ -181,8 +181,9 @@ main .review-number-txt {
     line-height: 24px;
   }
   main .gradient-side {
-    margin: 6%;
     padding: 20px;
+    margin-left: 16px;
+    margin-right: 16px;
   }
   main .bullets .question {
     font-size: 16px;
