--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ main .gradient-side {
 main .gradient-headline {
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 18px;
   line-height: 32px;
 }
 main .bullets .question {
@@ -118,7 +118,9 @@ main .bullets .question {
   line-height: 30px;
   margin-left: 16px;
 }
-main .bullets span {
+main .bullets .question-wrapper {
+  display: flex;
+  align-items: center;
   margin-top: 30px;
 }
 main .to-dashboard-btn {
@@ -177,7 +179,7 @@ main .review-number-txt {
     display: none;
   }
   main .gradient-headline {
-    font-size: 16px;
+    font-size: 18px;
     line-height: 24px;
   }
   main .gradient-side {
@@ -186,7 +188,7 @@ main .review-number-txt {
     margin-right: 16px;
   }
   main .bullets .question {
-    font-size: 16px;
+    font-size: 3vw;
   }
   .navbar-toggler {
     visibility: hidden !important;
@@ -225,7 +227,7 @@ main .review-number-txt {
     padding-top: 110px;
   }
   main .gradient-headline {
-    font-size: 20px;
+    font-size: 18px;
     line-height: 24px;
   }
   main .bullets .question {
