--- a/styles.scss
+++ b/styles.scss
@@ -119,7 +119,7 @@ main {
   .gradient-headline {
     font-style: normal;
     font-weight: 700;
-    font-size: 24px;
+    font-size: 18px;
     line-height: 32px;
   }
 
@@ -131,8 +131,10 @@ main {
     margin-left: 16px;
   }
 
-  .bullets span {
-    margin-top: 30px;
+  .bullets .question-wrapper {
+      display: flex;
+      align-items: center;
+      margin-top: 30px;
   }
 
   .to-dashboard-btn {
@@ -196,7 +198,7 @@ main {
 
   main {
     .gradient-headline {
-      font-size: 16px;
+      font-size: 18px;
       line-height: 24px;
     }
 
@@ -206,7 +208,7 @@ main {
       margin-right: 16px;
     }
     .bullets .question {
-      font-size: 16px;
+      font-size: 3vw;
     }
   }
 
@@ -257,7 +259,7 @@ main {
 
   main {
     .gradient-headline {
-      font-size: 20px;
+      font-size: 18px;
       line-height: 24px;
     }
 
