--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -1,4 +1,9 @@
-
-body {
-    background-color: red;
+* {
+  font-family: "Inter";
 }
+
+input {
+  color: #667085 !important;
+}
+
+/*# sourceMappingURL=dashboard.css.map */
