--- a/dashboard/dashboard.scss
+++ b/dashboard/dashboard.scss
@@ -8,17 +8,25 @@ $blue: #1570ef;
 }
 
 input {
-    color: #667085 !important;
-  }
-  
+  color: #667085 !important;
+}
 
-// Mobile 
+.header-container {
+  height: 80px;
+  border-bottom: 1px solid gray;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+// Mobile
 @media screen and (max-width: 770px) {
-
+    .user-name-txt {
+        display: none;
+    }
 }
 
-// Tablet 
+// Tablet
 @media (min-width: 750px) and (max-width: 1065px) {
-
 }
-
