Adjust footer width

--- a/dashboard/dashboard.scss
+++ b/dashboard/dashboard.scss
@@ -54,6 +54,7 @@ input {
   //   transform: translateY(100%);
   transition: 0.3s all;
   padding-top: 18px;
+  width: 100%;
 }
 
 .bottom-tray.bottom-tray-show {
