--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -80,12 +80,30 @@ input {
   border: 0;
 }
 
+.card-wrapper {
+  padding: 18px;
+}
+.card-wrapper .card {
+  width: 100%;
+  margin-bottom: 20px;
+}
+.card-wrapper .card-body {
+  padding: 25px;
+}
+.card-wrapper .card-body .card-title {
+  margin-left: 11px;
+}
+.card-wrapper .card-body .card-txt {
+  margin-left: 54px;
+  display: block;
+}
+
 @media screen and (max-width: 770px) {
   .user-name-txt {
     display: none;
   }
 }
-@media (min-width: 750px) and (max-width: 1060px) {
+@media (min-width: 750px) and (max-width: 990px) {
   #open-side-nav {
     display: inline;
   }
