--- a/dashboard/dashboard.scss
+++ b/dashboard/dashboard.scss
@@ -106,6 +106,14 @@ input {
   }
 }
 
+.gradient-side {
+  color: white;
+  font-weight: 400;
+  padding: 60px;
+  background: $gradient;
+  height: 80vh;
+}
+
 // Mobile
 @media screen and (max-width: 770px) {
   .user-name-txt {
