--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -41,6 +41,12 @@ input {
   flex: 1;
 }
 
+.main-wrapper {
+  width: 100%;
+  height: 80vh;
+  overflow: auto;
+}
+
 .bottom-tray {
   position: fixed;
   bottom: 0;
@@ -80,12 +86,18 @@ input {
   border: 0;
 }
 
+.connect-now-btn {
+  margin-top: 70px;
+}
+
 .card-wrapper {
   padding: 18px;
 }
 .card-wrapper .card {
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 32px;
+  border: 1px solid rgba(0, 0, 0, 0.0588235294);
+  box-shadow: rgba(0, 0, 0, 0.0901960784) 1px 2px 7px -1px;
 }
 .card-wrapper .card-body {
   padding: 25px;
@@ -103,7 +115,7 @@ input {
   font-weight: 400;
   padding: 60px;
   background: linear-gradient(25.53deg, #0ba5ec 24.12%, #2e3192 95.96%);
-  height: 80vh;
+  height: 70vh;
 }
 .gradient-side .main-txt {
   font-style: normal;
