--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -90,6 +90,20 @@ input {
   margin-top: 70px;
 }
 
+.modal-header {
+  width: 300px;
+}
+
+.close {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  border: 0;
+  background: rgba(21, 112, 239, 0.231372549);
+  color: #1570ef;
+  font-size: 20px;
+}
+
 .card-wrapper {
   padding: 18px;
 }
@@ -133,6 +147,14 @@ input {
 }
 .gradient-side .bullets .question-wrapper .question {
   font-size: 20px;
+}
+
+.modal ul {
+  list-style-type: none;
+  padding: 0;
+}
+.modal ul li {
+  margin-bottom: 15px;
 }
 
 @media screen and (max-width: 770px) {
