--- a/dashboard/dashboard.scss
+++ b/dashboard/dashboard.scss
@@ -96,6 +96,20 @@ input {
   margin-top: 70px;
 }
 
+.modal-header {
+  width: 300px;
+}
+
+.close {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  border: 0;
+  background: #1570ef3b;
+  color: #1570ef;
+  font-size: 20px;
+}
+
 .card-wrapper {
   padding: 18px;
   .card {
@@ -143,6 +157,17 @@ input {
 
     .question {
       font-size: 20px;
+    }
+  }
+}
+
+.modal {
+  ul {
+    list-style-type: none;
+    padding: 0;
+
+    li {
+      margin-bottom: 15px;
     }
   }
 }
