Font adjustment based on breakpoints

--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -161,6 +161,19 @@ input {
   .user-name-txt {
     display: none;
   }
+  .card-text {
+    font-size: 12px;
+  }
+  .text-muted {
+    font-size: 12px !important;
+  }
+  .gradient-side .main-txt {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .gradient-side .bullets .question-wrapper .question {
+    font-size: 13px;
+  }
 }
 @media (min-width: 750px) and (max-width: 990px) {
   #open-side-nav {
@@ -168,6 +181,19 @@ input {
   }
   .sidebar {
     display: none !important;
+  }
+  .card-text {
+    font-size: 14px;
+  }
+  .text-muted {
+    font-size: 14px !important;
+  }
+  .main-txt {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .bullets .question {
+    font-size: 15px;
   }
 }
 
