--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -28,13 +28,26 @@ input {
 
 .sidebar {
   position: fixed;
-  top: 80px;
+  top: 50px;
   background: linear-gradient(25.53deg, #0ba5ec 24.12%, #2e3192 95.96%);
   bottom: 0;
   left: 0;
   z-index: 100;
   padding: 48px 0 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
+}
+.sidebar .nav-item {
+  width: 85%;
+  margin-left: 21px;
+}
+.sidebar .nav-item img {
+  margin-right: 9px;
+}
+.sidebar .nav-item a {
+  padding: 13px 18px;
+}
+.sidebar .nav-item a.active {
+  background-color: #2e90fa;
 }
 
 .flex-1 {
