--- a/credit-report/styles.css
+++ b/credit-report/styles.css
@@ -209,5 +209,32 @@ input {
     font-size: 15px;
   }
 }
+.transfer-txt {
+  margin-top: 122px;
+}
+.transfer-txt h3 {
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 38px;
+  color: #101828;
+}
+.transfer-txt p {
+  margin-right: 20%;
+  margin-left: 20%;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 28px;
+  color: #101828;
+}
+.transfer-txt .cancel-btn {
+  padding: 12px 20px 12px 20px;
+  background: white;
+  color: #1570ef;
+  border: 1px solid #d0d5dd;
+}
+.transfer-txt .continue-btn {
+  padding: 12px 20px 12px 20px;
+  margin-left: 16px;
+}
 
 /*# sourceMappingURL=styles.css.map */
