--- a/credit-report/styles.css
+++ b/credit-report/styles.css
@@ -231,10 +231,21 @@ input {
   background: white;
   color: #1570ef;
   border: 1px solid #d0d5dd;
+  width: 113px;
+  height: 50px;
 }
 .transfer-txt .continue-btn {
   padding: 12px 20px 12px 20px;
   margin-left: 16px;
+  width: 113px;
+  height: 50px;
+}
+
+@media screen and (max-width: 770px) {
+  .transfer-txt p {
+    margin-right: 10%;
+    margin-left: 10%;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
