--- a/credit-report/styles.css
+++ b/credit-report/styles.css
@@ -81,6 +81,7 @@ input {
   font-size: 11px;
   line-height: 20px;
   font-weight: 400;
+  margin-bottom: 10px;
 }
 
 .modal-dialog {
@@ -100,7 +101,7 @@ input {
 }
 
 .connect-now-btn {
-  margin-top: 70px;
+  margin-top: 30px;
 }
 
 .modal-header {
@@ -133,8 +134,11 @@ input {
   margin-left: 11px;
 }
 .card-wrapper .card-body .card-txt {
-  margin-left: 54px;
+  margin-left: 62px;
   display: block;
+}
+.card-wrapper .card-body .card-subtitle {
+  font-weight: 400;
 }
 
 .gradient-side {
@@ -153,7 +157,7 @@ input {
 .gradient-side .bullets .question-wrapper {
   display: flex;
   align-items: center;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 .gradient-side .bullets .question-wrapper img {
   margin-right: 16px;
