Show form switcher on mobile view

--- a/my-details/styles.css
+++ b/my-details/styles.css
@@ -223,7 +223,11 @@ input {
   padding: 12px;
 }
 
-.btn {
+.form-switcher {
+  display: none;
+}
+
+.btn-light {
   padding: 12px 20px 12px 20px;
   border: 1px solid #d0d5dd;
   color: #1570ef;
@@ -234,6 +238,15 @@ input {
 .main-wrapper h6 {
   padding-bottom: 24px;
   padding-top: 30px;
+}
+
+@media screen and (max-width: 770px) {
+  .form-switcher {
+    display: inline-flex;
+  }
+  .change-password-wrapper {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
