--- a/dashboard/dashboard.scss
+++ b/dashboard/dashboard.scss
@@ -59,10 +59,21 @@ input {
   }
 }
 
+.profile-dropdown {
+  right: 12px !important;
+  left: unset !important;
+  background-color: white;
+
+  li {
+    padding: 12px;
+  }
+}
+
 .mobile-top-menu {
   padding: 13px;
   border-bottom: 1px solid #f2f4f7;
   font-weight: 500;
+  color: black;
 
   img {
     margin-right: 10px;
