--- a/institution/styles.css
+++ b/institution/styles.css
@@ -50,10 +50,20 @@ input {
   background-color: #2e90fa;
 }
 
+.profile-dropdown {
+  right: 12px !important;
+  left: unset !important;
+  background-color: white;
+}
+.profile-dropdown li {
+  padding: 12px;
+}
+
 .mobile-top-menu {
   padding: 13px;
   border-bottom: 1px solid #f2f4f7;
   font-weight: 500;
+  color: black;
 }
 .mobile-top-menu img {
   margin-right: 10px;
