--- a/dashboard/dashboard.scss
+++ b/dashboard/dashboard.scss
@@ -59,6 +59,10 @@ input {
   }
 }
 
+.user-name-txt {
+  color: black;
+}
+
 .profile-dropdown {
   right: 12px !important;
   left: unset !important;
@@ -188,6 +192,7 @@ input {
     font-weight: 700;
     font-size: 18px;
     line-height: 32px;
+    margin-top: 30px;
   }
 
   .bullets .question-wrapper {
@@ -233,6 +238,7 @@ input {
     .main-txt {
       font-size: 14px;
       line-height: 24px;
+      margin-top: 0;
     }
 
     .bullets .question-wrapper .question {
@@ -266,12 +272,17 @@ input {
   .text-muted {
     font-size: 14px !important;
   }
-  .main-txt {
-    font-size: 18px;
-    line-height: 24px;
-  }
 
-  .bullets .question {
-    font-size: 15px;
+  .gradient-side {
+    padding-top: 10px;
+    .main-txt {
+      font-size: 18px;
+      line-height: 24px;
+      margin-top: 0;
+    }
+
+    .bullets .question-wrapper .question {
+      font-size: 15px;
+    }
   }
 }
