--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -50,6 +50,10 @@ input {
   background-color: #2e90fa;
 }
 
+.user-name-txt {
+  color: black;
+}
+
 .profile-dropdown {
   right: 12px !important;
   left: unset !important;
@@ -173,10 +177,12 @@ input {
   font-weight: 700;
   font-size: 18px;
   line-height: 32px;
+  margin-top: 30px;
 }
 .gradient-side .bullets .question-wrapper {
   display: flex;
   align-items: center;
+  margin-top: 20px;
 }
 .gradient-side .bullets .question-wrapper img {
   margin-right: 16px;
@@ -193,10 +199,6 @@ input {
   margin-bottom: 15px;
 }
 
-.user-name-txt {
-  color: black;
-}
-
 @media screen and (max-width: 770px) {
   .user-name-txt {
     display: none;
@@ -210,6 +212,7 @@ input {
   .gradient-side .main-txt {
     font-size: 14px;
     line-height: 24px;
+    margin-top: 0;
   }
   .gradient-side .bullets .question-wrapper .question {
     font-size: 13px;
@@ -220,7 +223,7 @@ input {
     overflow: auto;
   }
 }
-@media (min-width: 770px) and (max-width: 990px) {
+@media (min-width: 750px) and (max-width: 990px) {
   .navbar-collapse {
     display: none;
   }
@@ -236,11 +239,15 @@ input {
   .text-muted {
     font-size: 14px !important;
   }
-  .main-txt {
+  .gradient-side {
+    padding-top: 10px;
+  }
+  .gradient-side .main-txt {
     font-size: 18px;
     line-height: 24px;
+    margin-top: 0;
   }
-  .bullets .question {
+  .gradient-side .bullets .question-wrapper .question {
     font-size: 15px;
   }
 }
